kube-prometheus/common-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: not-important
spec:
  revisionHistoryLimit: 0
