kube-prometheus/kube-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-proxy
  labels:
    app: kube-proxy
    jobLabel: kube-proxy
  namespace: kube-system
spec:
  clusterIP: None
  ports:
    - name: http-metrics
      port: 10249
      protocol: TCP
      targetPort: 10249
  type: ClusterIP
