kube-prometheus/kube-scheduler-endpoint.yaml
addressType: IPv4
apiVersion: discovery.k8s.io/v1
endpoints:
  - addresses:
      - 192.168.1.121
    conditions: {}
kind: EndpointSlice
metadata:
  creationTimestamp: '2023-08-07T00:09:52Z'
  labels:
    app: kube-scheduler
    app.kubernetes.io/instance: kube-prometheus
    endpointslice.kubernetes.io/managed-by: endpointslicemirroring-controller.k8s.io
    k8s-app: kube-scheduler
    kubernetes.io/service-name: kube-scheduler
  name: kube-scheduler
  namespace: kube-system
ports:
  - name: http-metrics
    port: 10251
    protocol: TCP
